--- a/Train_Model.ipynb
+++ b/Train_Model.ipynb
@@ -6,7 +6,7 @@
       "name": "Train_Model.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPGwfbDk/WDc0cIdFOastoG",
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,7 +36,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5MGmnCQ7qo3m",
-        "outputId": "b4a25b90-c634-4971-ae86-bf0ecb79ae2b"
+        "outputId": "d07d04cf-c4fe-4beb-d9c7-0b1da3d55589"
       },
       "source": [
         "from google.colab import drive\n",
@@ -93,8 +93,7 @@
         "from tensorflow.keras.utils import to_categorical\n",
         "from sklearn.preprocessing import LabelBinarizer\n",
         "from sklearn.model_selection import train_test_split\n",
-        "from sklearn.metrics import classification_report\n",
-        "from sklearn.metrics import accuracy_score"
+        "from sklearn.metrics import classification_report"
       ],
       "execution_count": null,
       "outputs": []
@@ -106,7 +105,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "023a0d5a-956a-4fac-b86e-7db0f50f48af"
+        "outputId": "546c5ac9-eaad-43b8-83b2-2b74205cee49"
       },
       "source": [
         "project_path = '/content/MyDrive/My Drive/Colab Notebooks/Soft Computing/'\n",
@@ -133,7 +132,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "G4EKOKxAsgYZ",
-        "outputId": "a9a72d17-0e11-4273-b21a-d7f4aadc972d"
+        "outputId": "389f51b2-8b42-4037-8b72-8b6ea81a47ff"
       },
       "source": [
         "# Initialize the path for dataset\n",
@@ -158,7 +157,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "AUCacZc3slw0",
-        "outputId": "d654b49e-fcd8-4579-c33e-44888e6aa0df"
+        "outputId": "85b60d8a-0d74-422b-b371-53326ad7a1d6"
       },
       "source": [
         "temp = imagePaths[-1]\n",
@@ -193,7 +192,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qyZ8p4pTtL2w",
-        "outputId": "0c053f65-52c1-4d12-afef-060cf1d50014"
+        "outputId": "4f6706d4-23dc-4066-dca1-660da20574ad"
       },
       "source": [
         "# initialize dataset and its label\n",
@@ -217,7 +216,7 @@
         {
           "output_type": "stream",
           "text": [
-            " 49%|████▊     | 1399/2878 [11:42<12:27,  1.98it/s]"
+            "100%|██████████| 2878/2878 [31:07<00:00,  1.54it/s]\n"
           ],
           "name": "stderr"
         }
@@ -249,6 +248,35 @@
             "2878\n"
           ],
           "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 189
+        },
+        "id": "VWCWgWHVSarG",
+        "outputId": "f8c57871-2936-4b91-a652-ae0d6dab7f8f"
+      },
+      "source": [
+        "print(data.shape)\n",
+        "print(labels.shape)"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "AttributeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-8-a35723ca33fa>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlabels\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mAttributeError\u001b[0m: 'list' object has no attribute 'shape'"
+          ]
         }
       ]
     },
@@ -318,11 +346,7 @@
         "# labels = to_categorical(labels)\n",
         "\n",
         "# split the data into 70% for training and 30% for testing \n",
-        "(trainX, testX, trainY, testY) = train_test_split(data, \n",
-        "                                                  labels, \n",
-        "                                                  test_size=0.30, \n",
-        "                                                  stratify=labels, \n",
-        "                                                  random_state=10)\n",
+        "(trainX, testX, trainY, testY) = train_test_split(data, labels, test_size=0.30, stratify=labels, random_state=10)\n",
         "\n",
         "# construct the training image generator for data augmentation\n",
         "aug = ImageDataGenerator(\n",
@@ -387,9 +411,7 @@
       },
       "source": [
         "# load the MobileNetV2 network, ensuring the head FC layer sets are left off\n",
-        "baseModel = MobileNetV2(weights=\"imagenet\", \n",
-        "                        include_top=False, \n",
-        "                        input_tensor=Input(shape=(224, 224, 3)))\n",
+        "baseModel = MobileNetV2(weights=\"imagenet\", include_top=False, input_tensor=Input(shape=(224, 224, 3)))\n",
         "\n",
         "# construct the head of the model that will be placed on top of the base model(MobileNetV2)\n",
         "# I'm using softmax for multiclass classification \n",
@@ -1081,7 +1103,7 @@
       },
       "source": [
         "# # To load the model\n",
-        "model = load_model('/content/MyDrive/My Drive/Colab Notebooks/Soft Computing/Saved_model')"
+        "new_model = load_model('/content/MyDrive/My Drive/Colab Notebooks/Soft Computing/Saved_model')"
       ],
       "execution_count": null,
       "outputs": []
