Added new comments

--- a/Train_Model.ipynb
+++ b/Train_Model.ipynb
@@ -36,13 +36,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5MGmnCQ7qo3m",
-        "outputId": "d07d04cf-c4fe-4beb-d9c7-0b1da3d55589"
+        "outputId": "a963a57c-648b-4766-a1f2-ae8d5d4ceddc"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/MyDrive')"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -84,8 +84,6 @@
         "from tensorflow.keras.optimizers import Adam\n",
         "from tensorflow.keras.applications.mobilenet_v2 import preprocess_input\n",
         "from tensorflow.keras.models import load_model\n",
-        "# import tensorflow as tf\n",
-        "# from tensorflow import keras\n",
         "\n",
         "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
         "from tensorflow.keras.preprocessing.image import img_to_array\n",
@@ -95,7 +93,7 @@
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.metrics import classification_report"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -105,7 +103,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "546c5ac9-eaad-43b8-83b2-2b74205cee49"
+        "outputId": "70534d62-bead-480a-a569-fddf1145452f"
       },
       "source": [
         "project_path = '/content/MyDrive/My Drive/Colab Notebooks/Soft Computing/'\n",
@@ -114,7 +112,7 @@
         "\n",
         "print(dataset_path)"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -132,45 +130,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "G4EKOKxAsgYZ",
-        "outputId": "389f51b2-8b42-4037-8b72-8b6ea81a47ff"
+        "outputId": "b7be8517-e3b3-4b1f-8970-8ef9620bf252"
       },
       "source": [
         "# Initialize the path for dataset\n",
         "imagePaths=list(paths.list_images(dataset_path))\n",
         "print(\"Number of dataset:\", len(imagePaths))"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Number of dataset: 2878\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "AUCacZc3slw0",
-        "outputId": "85b60d8a-0d74-422b-b371-53326ad7a1d6"
-      },
-      "source": [
-        "temp = imagePaths[-1]\n",
-        "print(temp)\n",
-        "print(len(imagePaths))"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "/content/MyDrive/My Drive/Colab Notebooks/Soft Computing/Datasets/No_Mask/00000/00999.png\n",
-            "2878\n"
           ],
           "name": "stdout"
         }
@@ -219,114 +191,6 @@
             "100%|██████████| 2878/2878 [31:07<00:00,  1.54it/s]\n"
           ],
           "name": "stderr"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "7kC41JGXzYef",
-        "outputId": "8ed6c2e5-ddfc-4dd6-ddd7-a16a87bc4b74"
-      },
-      "source": [
-        "# do checking\n",
-        "print(len(labels))\n",
-        "print(len(data))\n",
-        "\n",
-        "# data = np.array(data, dtype=\"float32\")\n",
-        "# labels = np.array(labels)"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "2878\n",
-            "2878\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 189
-        },
-        "id": "VWCWgWHVSarG",
-        "outputId": "f8c57871-2936-4b91-a652-ae0d6dab7f8f"
-      },
-      "source": [
-        "print(data.shape)\n",
-        "print(labels.shape)"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "AttributeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-8-a35723ca33fa>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlabels\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mAttributeError\u001b[0m: 'list' object has no attribute 'shape'"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "HBnvTTknTJLF",
-        "outputId": "d0f24a83-f6d0-4086-8928-3fa59b39644e"
-      },
-      "source": [
-        "# print(data.shape)\n",
-        "# print(labels.shape)"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "(5795, 224, 224, 3)\n",
-            "(5795, 3)\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "mNE-xRN0Rn4i",
-        "outputId": "54d10aec-d236-4582-e495-b02bcbc5327a"
-      },
-      "source": [
-        "print(data.shape)\n",
-        "print(labels.shape)"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "(5795, 224, 224, 3)\n",
-            "(5795, 3, 2)\n"
-          ],
-          "name": "stdout"
         }
       ]
     },
@@ -812,8 +676,10 @@
         "# initialize the optimizer \n",
         "optimizer = Adam(lr= learning_rate, decay=learning_rate/epochs)\n",
         "\n",
+        "# complie the model\n",
         "model.compile(loss=\"categorical_crossentropy\", optimizer=optimizer, metrics=['accuracy'])\n",
         "\n",
+        "# start training the model\n",
         "hist = model.fit(\n",
         "    aug.flow(trainX, trainY, batch_size = bs),\n",
         "    steps_per_epoch = len(trainX)//bs,\n",
@@ -1020,7 +886,7 @@
         "outputId": "ca76bd67-32e5-4c29-a6db-61a45898d8c5"
       },
       "source": [
-        "# plot the training loss and accuracy graphs of training and validation \n",
+        "# plot the training loss and accuracy graph\n",
         "N = epochs\n",
         "plt.style.use(\"ggplot\")\n",
         "plt.figure()\n",
@@ -1071,6 +937,7 @@
         "outputId": "23d3675c-165c-431f-bdb5-fdf9cb215bdc"
       },
       "source": [
+        "# Test the model using testing dataset\n",
         "predict = model.predict(testX, batch_size = bs)\n",
         "\n",
         "predict = np.argmax(predict,axis=1)\n",
@@ -1109,147 +976,12 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "L21TsjkCgbGT",
-        "outputId": "3a0bc402-084e-4910-85a1-dcb3fb18c84b"
-      },
-      "source": [
-        "hist.history"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "{'accuracy': [0.8501513600349426,\n",
-              "  0.9445005059242249,\n",
-              "  0.957114040851593,\n",
-              "  0.9636730551719666,\n",
-              "  0.9646821618080139,\n",
-              "  0.9702320694923401,\n",
-              "  0.9737638831138611,\n",
-              "  0.9707366228103638,\n",
-              "  0.9732593297958374,\n",
-              "  0.9788092970848083,\n",
-              "  0.9692230224609375,\n",
-              "  0.9732593297958374,\n",
-              "  0.9742684364318848,\n",
-              "  0.979313850402832,\n",
-              "  0.9772956371307373,\n",
-              "  0.9808274507522583,\n",
-              "  0.9762865900993347,\n",
-              "  0.9788092970848083,\n",
-              "  0.979313850402832,\n",
-              "  0.9818365573883057],\n",
-              " 'loss': [0.3895569443702698,\n",
-              "  0.15013709664344788,\n",
-              "  0.11374998092651367,\n",
-              "  0.10618852078914642,\n",
-              "  0.10837184637784958,\n",
-              "  0.08928857743740082,\n",
-              "  0.07329221814870834,\n",
-              "  0.0815257579088211,\n",
-              "  0.07129303365945816,\n",
-              "  0.05615605413913727,\n",
-              "  0.08946371078491211,\n",
-              "  0.06738469004631042,\n",
-              "  0.06214471533894539,\n",
-              "  0.05473016947507858,\n",
-              "  0.05739656090736389,\n",
-              "  0.05844041332602501,\n",
-              "  0.05689486488699913,\n",
-              "  0.05881491303443909,\n",
-              "  0.05389240011572838,\n",
-              "  0.04606708511710167],\n",
-              " 'val_accuracy': [0.9490740895271301,\n",
-              "  0.9571759104728699,\n",
-              "  0.9675925970077515,\n",
-              "  0.9710648059844971,\n",
-              "  0.9664351940155029,\n",
-              "  0.96875,\n",
-              "  0.9722222089767456,\n",
-              "  0.9722222089767456,\n",
-              "  0.9722222089767456,\n",
-              "  0.9710648059844971,\n",
-              "  0.9722222089767456,\n",
-              "  0.9745370149612427,\n",
-              "  0.9733796119689941,\n",
-              "  0.9629629850387573,\n",
-              "  0.9745370149612427,\n",
-              "  0.9652777910232544,\n",
-              "  0.9791666865348816,\n",
-              "  0.9733796119689941,\n",
-              "  0.96875,\n",
-              "  0.9745370149612427],\n",
-              " 'val_loss': [0.14172379672527313,\n",
-              "  0.10291716456413269,\n",
-              "  0.09067658334970474,\n",
-              "  0.08172601461410522,\n",
-              "  0.08574990183115005,\n",
-              "  0.0812915489077568,\n",
-              "  0.0912884995341301,\n",
-              "  0.07886390388011932,\n",
-              "  0.07350949943065643,\n",
-              "  0.07383035123348236,\n",
-              "  0.0729113519191742,\n",
-              "  0.06392066925764084,\n",
-              "  0.07055246084928513,\n",
-              "  0.09140879660844803,\n",
-              "  0.06592074036598206,\n",
-              "  0.09420838207006454,\n",
-              "  0.06894811987876892,\n",
-              "  0.07070707529783249,\n",
-              "  0.07991918176412582,\n",
-              "  0.06994865089654922]}"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 18
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 171
-        },
-        "id": "4uU3xJB6gc8g",
-        "outputId": "3c774177-c878-41b3-b3f3-78bff9cb7c8e"
-      },
-      "source": [
-        "new_model.history[\"loss\"]"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-16-739e4fceccc3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mnew_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhistory\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"loss\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m: 'NoneType' object is not subscriptable"
-          ]
-        }
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "UCvRCFNgH-ae"
       },
       "source": [
-        "# Draft\n",
+        "# Others\n",
         "\n"
       ]
     },
