--- a/Video_Input_Model.ipynb
+++ b/Video_Input_Model.ipynb
@@ -6,7 +6,7 @@
       "name": "Video_Input_Model.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNQeI53wzEqiv2iexvorFZ+",
+      "authorship_tag": "ABX9TyPEn+7BtnE8U0RAPLADDw6K",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -141,6 +141,7 @@
         "id": "KdOXPu04lS8Y"
       },
       "source": [
+        "# capture image using webcam\n",
         "import base64\n",
         "import html\n",
         "import io\n",
@@ -289,60 +290,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "aLKPHeABhBuh"
-      },
-      "source": [
-        "# def detect_and_predict_mask(frame,faceNet,maskNet):\n",
-        "#     #grab the dimensions of the frame and then construct a blob\n",
-        "#     (h,w)=frame.shape[:2]\n",
-        "#     blob=cv2.dnn.blobFromImage(frame,1.0,(300,300),(104.0,177.0,123.0))\n",
-        "    \n",
-        "#     faceNet.setInput(blob)\n",
-        "#     detections=faceNet.forward()\n",
-        "    \n",
-        "#     #initialize our list of faces, their corresponding locations and list of predictions\n",
-        "    \n",
-        "#     faces=[]\n",
-        "#     locs=[]\n",
-        "#     preds=[]\n",
-        "    \n",
-        "    \n",
-        "#     for i in range(0,detections.shape[2]):\n",
-        "#         confidence=detections[0,0,i,2]\n",
-        "    \n",
-        "    \n",
-        "#         if confidence>0.5:\n",
-        "#         #we need the X,Y coordinates\n",
-        "#             box=detections[0,0,i,3:7]*np.array([w,h,w,h])\n",
-        "#             (startX,startY,endX,endY)=box.astype('int')\n",
-        "        \n",
-        "#             #ensure the bounding boxes fall within the dimensions of the frame\n",
-        "#             (startX,startY)=(max(0,startX),max(0,startY))\n",
-        "#             (endX,endY)=(min(w-1,endX), min(h-1,endY))\n",
-        "        \n",
-        "#             #extract the face ROI, convert it from BGR to RGB channel, resize it to 224,224 and preprocess it\n",
-        "#             face=frame[startY:endY, startX:endX]\n",
-        "#             face=cv2.cvtColor(face,cv2.COLOR_BGR2RGB)\n",
-        "#             face=cv2.resize(face,(224,224))\n",
-        "#             face=img_to_array(face)\n",
-        "#             face=preprocess_input(face)\n",
-        "        \n",
-        "#             faces.append(face)\n",
-        "#             locs.append((startX,startY,endX,endY))\n",
-        "        \n",
-        "#         #only make a predictions if atleast one face was detected\n",
-        "#         if len(faces)>0:\n",
-        "#             faces=np.array(faces,dtype='float32')\n",
-        "#             preds=maskNet.predict(faces,batch_size=12)\n",
-        "        \n",
-        "#         return (locs,preds)"
-      ],
-      "execution_count": 5,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
@@ -378,6 +325,7 @@
         "id": "Z_0C5vFLhPNs"
       },
       "source": [
+        "# load face detection model\n",
         "faceNet=cv2.dnn.readNet(prototxtPath,weightsPath)"
       ],
       "execution_count": 7,
@@ -401,6 +349,7 @@
         "id": "jxPSwiHali84"
       },
       "source": [
+        "# method to convert JS image object to np array\n",
         "def js_reply_to_image(js_reply):\n",
         "    \"\"\"\n",
         "    input: \n",
@@ -713,76 +662,6 @@
           }
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "fFfzhvPjhfr3"
-      },
-      "source": [
-        "# vs=VideoStream(src=0).start()\n",
-        "\n",
-        "# while True:\n",
-        "#     #grab the frame from the threaded video stream and resize it\n",
-        "#     #to have a maximum width of 400 pixels\n",
-        "#     frame=vs.read()\n",
-        "#     frame=imutils.resize(frame,width=400)\n",
-        "    \n",
-        "#     #detect faces in the frame and preict if they are waring masks or not\n",
-        "#     (locs,preds)=detect_and_predict_mask(frame,faceNet,maskNet)\n",
-        "    \n",
-        "#     #loop over the detected face locations and their corrosponding loactions\n",
-        "    \n",
-        "#     for (box,pred) in zip(locs,preds):\n",
-        "#         (startX,startY,endX,endY)=box\n",
-        "#         (mask,withoutMask)=pred\n",
-        "        \n",
-        "#         label = \"\"\n",
-        "#         color = (0,0,0)\n",
-        "#         #determine the class label and color we will use to draw the bounding box and text\n",
-        "#         if (incorrectMask > mask) and (incorrectMask > withoutMask):\n",
-        "#           label = \"Incorrect Mask\"\n",
-        "#           color = (240, 69, 50)\n",
-        "        \n",
-        "#         elif (mask > incorrectMask) and (mask > withoutMask):\n",
-        "#           label = \"Mask\"\n",
-        "#           color = (0, 255, 0)\n",
-        "\n",
-        "#         else:\n",
-        "#           label = 'No Mask'\n",
-        "#           color = (0, 0, 255)\n",
-        "        \n",
-        "#         #display the label and bounding boxes\n",
-        "#         cv2.putText(frame,label,(startX,startY-10),cv2.FONT_HERSHEY_SIMPLEX,0.45,color,2)\n",
-        "        \n",
-        "#         cv2.rectangle(frame,(startX,startY),(endX,endY),color,2)\n",
-        "        \n",
-        "#     #show the output frame\n",
-        "#     cv2.imshow(\"Frame\",frame)\n",
-        "#     key=cv2.waitKey(1) & 0xFF\n",
-        "    \n",
-        "#     if key==ord('q'):\n",
-        "#         break\n",
-        "        \n",
-        "# cv2.destroyAllWindows()\n",
-        "# vs.stop()\n",
-        "        \n",
-        "        \n",
-        "    "
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "ivleyoivhjuq"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
